# Pytorch_Retinaface

./: convert_to_onnx.py  detect.py  pyproject.toml  test_fddb.py  test_widerface.py  train.py
models/: retinaface.py
